# SATI-TESTE

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202604230001_init_schema.py  202604230002_runtime_alignment.py  202604250001_runtime_config_platform.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: admin.py  auth.py  conversations.py  health.py  metrics.py  playground.py  whatsapp_webhook.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  base.py  conversation.py  crm_dispatch.py  lead.py  media_asset.py  membership.py  runtime_config.py  scheduled_job.py  session.py  source_signature_map.py  tenant.py  user.py
backend/app/runtime/: README.md  debounce.py  runtime_service.py
backend/app/runtime/actions/: __init__.py  whatsapp_cloud_adapter.py  whatsapp_media.py
backend/app/runtime/policies/: __init__.py  followup.py  scheduling.py  simulation.py
backend/app/runtime/strategies/: __init__.py  base.py  mcmv_tenda_rj.py
backend/app/schemas/: admin.py  auth.py  conversation.py  metrics.py
backend/app/scripts/: seed_demo.py
backend/app/services/: admin_service.py  audio_transcription_service.py  auth_service.py  conversation_console_service.py  lead_analysis_service.py  metrics_service.py  playground_service.py  runtime_config_service.py  whatsapp_intake_service.py
(+56 files in other folders)
