[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sati-backend"
version = "0.1.0"
description = "Backend FastAPI da SATI IA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2.0",
  "bcrypt>=4.0,<4.1",
  "email-validator>=2.2,<3.0",
  "fastapi>=0.116,<1.0",
  "openai>=2.0,<3.0",
  "passlib[bcrypt]>=1.7,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.6,<3.0",
  "python-multipart>=0.0.17,<1.0",
  "sentry-sdk[fastapi]>=2.18,<3.0",
  "sqlalchemy>=2.0.36,<3.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
